name:                miso-snake
version:             0.1.0.0
synopsis:            Snake game, using miso
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  build-depends:       base, containers, miso, random
  default-language:    Haskell2010
